--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     <![endif]-->
 
     <h1>jessicard</h1>
+    <ul>
+      <li><a href="https://twitter.com/jessicard" rel="me">Twitter</a></li>
+      <li><a href="https://github.com/jessicard" rel="me">GitHub</a></li>
+      <li><a href="mailto:jessicard@mac.com" rel="me">jessicard@mac.com</a></li>
+    </ul>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
