--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <![endif]-->
 
     <h1>jessicard</h1>
+    <img src="img/avatar.jpeg" alt="jessicard" />
     <ul>
       <li><a href="https://twitter.com/jessicard" rel="me">Twitter</a></li>
       <li><a href="https://github.com/jessicard" rel="me">GitHub</a></li>
