--- a/index.html
+++ b/index.html
@@ -20,9 +20,15 @@
 
     <h1>jessicard</h1>
     <ul>
-      <li><a href="https://twitter.com/jessicard" rel="me">twitter</a></li>
-      <li><a href="https://github.com/jessicard" rel="me">github</a></li>
-      <li><a href="mailto:jessicard@mac.com" rel="me">jessicard@mac.com</a></li>
+      <li>
+        <a href="https://twitter.com/jessicard" target="_blank" rel="me">twitter</a>
+      </li>
+      <li>
+        <a href="https://github.com/jessicard" target="_blank" rel="me">github</a>
+      </li>
+      <li>
+        <a href="mailto:jessicard@mac.com" target="_blank" rel="me">jessicard@mac.com</a>
+      </li>
     </ul>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
