--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="https://github.com/jessicard" target="_blank" rel="me">github</a>
       </li>
       <li>
-        <a href="mailto:jessicard@mac.com" target="_blank" rel="me">jessicard@mac.com</a>
+        <a href="mailto:jessicard@mac.com" rel="me">jessicard@mac.com</a>
       </li>
     </ul>
 
